crates/solidity/testing/snapshots/bindings_output/control/try_stmt/generated/0.4.11-failure.txt
# This file is generated automatically by infrastructure scripts. Please don't edit by hand.

Parse errors:
Error: Expected AddressKeyword or AssemblyKeyword or BoolKeyword or BreakKeyword or ByteKeyword or BytesKeyword or CloseBrace or ContinueKeyword or DecimalLiteral or DoKeyword or DoubleQuotedHexStringLiteral or DoubleQuotedStringLiteral or FalseKeyword or FixedKeyword or ForKeyword or FunctionKeyword or HexLiteral or Identifier or IfKeyword or IntKeyword or MappingKeyword or NewKeyword or OpenBrace or OpenBracket or OpenParen or ReturnKeyword or SingleQuotedHexStringLiteral or SingleQuotedStringLiteral or StringKeyword or ThrowKeyword or TrueKeyword or UfixedKeyword or UintKeyword or VarKeyword or WhileKeyword.
    ╭─[input.sol:9:9]
    │
  9 │ ╭─▶         try feed.getData(token) returns (uint v) {
    ┆ ┆   
 20 │ ├─▶     }
    │ │           
    │ ╰─────────── Error occurred here.
────╯
References and definitions: 
   ╭─[input.sol:1:1]
   │
 1 │ interface DataFeed { function getData(address token) external returns (uint value); }
   │           ────┬───            ───┬───         ──┬──                         ──┬──  
   │               ╰──────────────────────────────────────────────────────────────────── def: 1
   │                                  │              │                             │    
   │                                  ╰───────────────────────────────────────────────── def: 2
   │                                                 │                             │    
   │                                                 ╰────────────────────────────────── def: 3
   │                                                                               │    
   │                                                                               ╰──── def: 4
   │ 
 3 │ contract FeedConsumer {
   │          ──────┬─────  
   │                ╰─────── def: 5
 4 │     DataFeed feed;
   │     ────┬─── ──┬─  
   │         ╰────────── ref: 1
   │                │   
   │                ╰─── def: 6
 5 │     uint errorCount;
   │          ─────┬────  
   │               ╰────── def: 7
 6 │     uint lastValue;
   │          ────┬────  
   │              ╰────── def: 8
 7 │     function rate(address token) public returns (uint value, bool success) {
   │              ──┬─         ──┬──                       ──┬──       ───┬───  
   │                ╰─────────────────────────────────────────────────────────── def: 9
   │                             │                           │            │     
   │                             ╰────────────────────────────────────────────── def: 10
   │                                                         │            │     
   │                                                         ╰────────────────── def: 11
   │                                                                      │     
   │                                                                      ╰───── def: 12
 8 │         string memory last_reason;
   │                       ─────┬─────  
   │                            ╰─────── def: 13
───╯
